--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
-  "private": true,
+  "name": "wallet-activity-tracker",
+  "version": "1.0.0",
+  "description": "Application for tracking wallet connections and activities",
+  "main": "server.js",
   "scripts": {
-    "build": "echo 'no build script'"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no tests specified\" && exit 1"
+  },
+  "keywords": [
+    "wallet",
+    "tracker",
+    "express",
+    "activity-monitoring"
+  ],
+  "author": "Your Name",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
